tests/Errors/Generic/CodeAnalysis/EmptyStatement/DetectedForeach.php
<?php

declare(strict_types=1);

foreach (range(1, 100) as $value) {
}

var_export($value);
